@@ -5,6 +5,7 @@
 
   FIXED:
     * fixed an issue with paho mqtt disconnect callback.
+    * if battery and/or signal values are None, it leads to an exception, it has been fixed.
 
 
 ### March 1 2021, Release version 0.9.2 ###
